--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script language="javascript" type="text/javascript" src="Player.js"></script>
   <script language="javascript" type="text/javascript" src="Population.js"></script>
   <script language="javascript" type="text/javascript" src="Species.js"></script>
-  <script language="javascript" type="text/javascript" src="Genome.js"></script>
+  <script language="javascript" type="text/javascript" src="GENOME.js"></script>
 
     <script language="javascript" type="text/javascript" src="Wheel.js"></script>
     <script language="javascript" type="text/javascript" src="Car.js"></script>
